[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "autopep8>=2.0.1",
    "isort>=5.11.4",
]

[project]
name = "socnet"
version = "0.1.0"
description = "simple social network"
authors = [
    {name = "ReRubis", email = "slesarenkod@gmail.com"},
]
dependencies = [
    "sqlalchemy>=1.4.46",
    "sqlalchemy-utils>=0.39.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.5",
    "fastapi[all]>=0.89.1",
    "uvicorn[standart]>=0.20.0",
    "python-multipart>=0.0.5",
    "watchfiles>=0.18.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.poetry.scripts]
isort = "isort:run"